src/test/deca/syntax/invalid/class-insideClass.synt
class-insideClass.deca:1: